<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProductDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <android.support.constraint.Guideline
                android:id="@+id/gl_product_horizontal_thirty"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3" />

            <ImageView
                android:id="@+id/iv_product_image"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_match_constraints"
                android:layout_marginStart="@dimen/double_grid"
                android:layout_marginLeft="@dimen/double_grid"
                android:layout_marginTop="@dimen/double_grid"
                android:layout_marginEnd="@dimen/double_grid"
                android:layout_marginRight="@dimen/double_grid"
                app:layout_constraintBottom_toTopOf="@+id/gl_product_horizontal_thirty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/product_detail_image"/>

            <TextView
                android:id="@+id/tv_product_title"
                style="@style/DescricaoProdutoBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/double_grid"
                android:layout_marginLeft="@dimen/double_grid"
                android:layout_marginTop="@dimen/double_grid"
                android:layout_marginEnd="@dimen/double_grid"
                android:layout_marginRight="@dimen/double_grid"
                app:layout_constraintBottom_toTopOf="@+id/divider_one"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gl_product_horizontal_thirty"
                tools:text="Nome do product com uma descrição grandona" />

            <View
                android:id="@+id/divider_one"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/double_grid"
                android:background="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/tv_product_final_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_title" />

            <TextView
                android:id="@+id/tv_product_prev_price"
                style="@style/PrecoDe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/double_grid"
                android:layout_marginLeft="@dimen/double_grid"
                android:foreground="@drawable/preco_de_strick_through"
                android:gravity="start"
                app:layout_constraintBottom_toTopOf="@+id/tv_product_final_price"
                app:layout_constraintEnd_toStartOf="@+id/tv_product_final_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_final_price"
                tools:text="De 9999,99" />

            <TextView
                android:id="@+id/tv_product_final_price"
                style="@style/PrecoPor"
                android:layout_width="@dimen/text_view_constrainted_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/double_grid"
                android:layout_marginLeft="@dimen/double_grid"
                android:layout_marginTop="@dimen/double_grid"
                android:layout_marginEnd="@dimen/double_grid"
                android:layout_marginRight="@dimen/double_grid"
                android:gravity="end"
                app:layout_constraintBottom_toTopOf="@+id/divider_two"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_product_prev_price"
                app:layout_constraintTop_toBottomOf="@+id/divider_one"
                tools:text="Por 9999,98" />

            <View
                android:id="@+id/divider_two"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/double_grid"
                android:background="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/tv_product_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_final_price" />


            <TextView
                android:id="@+id/tv_product_description"
                style="@style/DescricaoProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/double_grid"
                android:layout_marginLeft="@dimen/double_grid"
                android:layout_marginTop="@dimen/double_grid"
                android:layout_marginEnd="@dimen/double_grid"
                android:layout_marginRight="@dimen/double_grid"
                android:layout_marginBottom="@dimen/bottom_margin_product_desc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_two"
                tools:text="Nome do product com uma descrição grandona" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_product_reserve"
        android:layout_width="@dimen/fab_width"
        android:layout_height="@dimen/fab_height"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/double_grid"
        android:layout_marginRight="@dimen/double_grid"
        android:layout_marginBottom="@dimen/double_grid"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/fab_circled_shape"
        app:backgroundTint="@color/warmPurple"
        android:src="@drawable/check_button"
        android:elevation="@dimen/fab_elevation"
        android:translationZ="@dimen/fab_z_trans"/>
</android.support.constraint.ConstraintLayout>